--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -543,7 +543,7 @@ border-radius:15px;
           <a ui-sref="app.dashboard"><i class="fa fa-home"></i> mDash</a>
         </li>
         <li>
-          <a ui-sref="app.">{{Interface_Name}}</a>
+          <a ng-click="viewflow(Interface_Name)">{{Interface_Name}}</a>
         </li>
         <li>
           <a ui-sref="app.">{{Flow_Name}}</a>
